--- a/app/src/br/com/loja/views/Index.form
+++ b/app/src/br/com/loja/views/Index.form
@@ -25,17 +25,25 @@
             <MenuItem class="javax.swing.JMenuItem" name="MenuRegisterUsers">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Users"/>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="MenuRegisterUsersActionPerformed"/>
               </Events>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+              </AuxValues>
             </MenuItem>
           </SubComponents>
         </Menu>
         <Menu class="javax.swing.JMenu" name="MenuReport">
           <Properties>
             <Property name="text" type="java.lang.String" value="Reports"/>
+            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+          </AuxValues>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="MenuReportServices">
               <Properties>
@@ -162,6 +170,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="User"/>
       </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+      </AuxValues>
     </Component>
     <Component class="javax.swing.JLabel" name="lblDate">
       <Properties>
