--- a/app/src/br/com/loja/views/Orders.form
+++ b/app/src/br/com/loja/views/Orders.form
@@ -444,6 +444,9 @@
           <Image iconType="3" name="/br/com/loja/icons/read.png"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSearchActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnEdit">
       <Properties>
